# obs-wayland

./: .env.example  .gitignore  README.md  mise.toml  obs-kyes.py  pyproject.toml
obs_wayland/: __init__.py  __main__.py
